# 111

./: .editorconfig  .gitignore  FIXES_SUMMARY.md  FIX_ISSUES_SUMMARY.md  LICENSE  PROJECT_MAP.md  README.md  build.gradle.kts  config  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ipc-bridge.cpp  mnn-bridge.cpp
app/src/main/java/com/gguf/zerocopy/: BootReceiver.kt  MainActivity.kt  ZeroCopyApp.kt
app/src/main/java/com/gguf/zerocopy/data/local/: SettingsManager.kt
app/src/main/java/com/gguf/zerocopy/data/repository/: ChatRepository.kt  ModelRepository.kt
app/src/main/java/com/gguf/zerocopy/domain/device/: DeviceUtils.kt
app/src/main/java/com/gguf/zerocopy/domain/inference/: EngineConfig.kt  EngineManager.kt  EngineRegistry.kt  ExecutorchEngine.kt  GGUFEngine.kt  InferenceConfig.kt  InferenceEngine.kt  LiteRtEngine.kt  LlamaCppEngine.kt  MnnEngine.kt  NativeBridge.kt  OnnxEngine.kt  RustCore.kt  SimpleTokenizer.kt  ToolManager.kt
app/src/main/java/com/gguf/zerocopy/domain/media/: TtsManager.kt  VoiceInputHandler.kt
app/src/main/java/com/gguf/zerocopy/domain/ocr/: PdfTextExtractor.kt
app/src/main/java/com/gguf/zerocopy/domain/rag/: RagEngine.kt
app/src/main/java/com/gguf/zerocopy/domain/server/: ModelServer.kt  ModelServerService.kt
app/src/main/java/com/gguf/zerocopy/ui/chat/: ChatScreen.kt  MarkdownText.kt
app/src/main/java/com/gguf/zerocopy/ui/chat/components/: ChatBubble.kt  Dialogs.kt  InputBar.kt  MarkdownText.kt  PromptSuggestions.kt  ThinkingContent.kt
app/src/main/java/com/gguf/zerocopy/ui/cloud/: CloudScreen.kt
app/src/main/java/com/gguf/zerocopy/ui/download/: DownloadScreen.kt
app/src/main/java/com/gguf/zerocopy/ui/models/: ModelListScreen.kt  ModelSelectionDialog.kt
app/src/main/java/com/gguf/zerocopy/ui/rag/: RagScreen.kt
app/src/main/java/com/gguf/zerocopy/ui/sessions/: SessionListScreen.kt
app/src/main/java/com/gguf/zerocopy/ui/settings/: SettingsScreen.kt
app/src/main/java/com/gguf/zerocopy/ui/theme/: Color.kt  Theme.kt  ZcColors.kt
app/src/main/java/com/gguf/zerocopy/ui/welcome/: WelcomeScreen.kt
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
mnn-lib/: build.gradle.kts
mnn-lib/src/main/cpp/: CMakeLists.txt  mnn-bridge.cpp
rust_core/: build_android.sh
rust_core/src/: lib.rs  memory.rs
zerocopy-lib/: build.gradle.kts  consumer-rules.pro
zerocopy-lib/src/main/cpp/: CMakeLists.txt  ipc-bridge.cpp  mnn-bridge.cpp  zerocopy_bridge.cpp
zerocopy-lib/src/main/java/com/gguf/zerocopy/lib/: GGMLEngine.kt  NativeBridge.kt
zerocopy-lib/src/main/java/com/gguf/zerocopy/lib/models/: GenerationEvent.kt
